tests/instantiating/invalid/overwriting_property_element_definitive_instantiation/bus.fbd
type foo_mask mask
	width = 1

main bus
	my_mask foo_mask
		width = 2
